flux-modules/kube-system/gateway-nlb-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw
  namespace: kube-system
spec:
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
      oci-network-load-balancer.oraclecloud.com/security-list-management-mode: "All"
      oci-network-load-balancer.oraclecloud.com/oci-network-security-groups: "ocid1.networksecuritygroup.oc1.sa-saopaulo-1.aaaaaaaata7nb4iywamnr44qhhpjcowxsgct3fi4mnb5vgtfmmmk4tqv6tla"
